--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@ h1{
 	width: 70%;
 	text-align: center;
 }
+@media only screen and (max-width: 768px){
+	.info{
+		width:90%;
+	}
+}
 .box-img{
 	width: 30%;
 	display: flex;
