--- a/index.html
+++ b/index.html
@@ -263,6 +263,12 @@ h1{
 	color: darkblue;
 	box-shadow: -20px 20px 3px rgba(0, 0, 0, 0.4);
 }
+@media only screen and (max-width: 768px){
+	#intro{
+		width: 70%;
+		
+	}
+}
 
 #intro{
   animation: sliding-button 2s ease-out;
