--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@ h1{
 }
 @media only screen and (max-width: 768px){
 	.box{
-		top: 90%;
-		left: 28%;
+		top: 80%;
+		left: 25%;
 	}
 }
 
@@ -120,7 +120,7 @@ h1{
 }
 @media only screen and (max-width: 768px){
 	.box:hover{
-		top: 90%;
+		top: 80%;
 	}
 }
 .box:hover .box-img{
@@ -571,7 +571,7 @@ h5{
 	.my-design img{
 		display: flex;
 		margin: 0 auto;
-		width: 90%;
+		width: 700px;
 }
 }
 #download{
@@ -673,7 +673,7 @@ h5{
 		<div class="project"><abbr title="click to view photo"><a href="images/ebook.png"><img src="images/ebook.png" alt="project 2"></a></abbr>
 			<h2>E-Library Website</h2>
 			<hr>
-			<p>This is a digital library platform designed to catalog and provide access to a diverse collection of e-books across various genres. The platform boasts an intuitive users interface with seamless navigation, comprising a secure login page, a dynamic home page with easy navigation menus, and a footer section displaying contact information. Key features include a search bar, a genre-based filtering system, enabling users to discover books by category, and a blog webpage dedicated to sharing the latest news and updates from the world of digital publishing.</p><a href="ebookvid.mp4">watch video</a>
+			<p>This is a digital library platform designed to catalog and provide access to a diverse collection of e-books across various genres. The platform boasts an intuitive users interface with seamless navigation, comprising a secure login page, a dynamic home page with easy navigation menus, and a footer section displaying contact information. Key features include a search bar, a genre-based filtering system, enabling users to discover books by category, and a blog webpage dedicated to sharing the latest news and updates from the world of digital publishing.</p>
 			<hr>
 			<p>HTML, CSS, Javascript</p>
 		</div>
