--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@ h5{
 	color: rgba(11, 35, 81, 1.0);
 }
 .my-design{
-	width: calc(90% - 20px);
+	width: calc(95% - 20px);
 	margin-top: 30px;
 	margin-left: 0;
 	margin-right: 0;
@@ -566,6 +566,8 @@ h5{
 @media only screen and (max-width: 768px){
 	.ui-designs{
 		grid-template-columns: 1fr;
+		padding:0;
+		margin:0;
 	}
 }@media only screen and (max-width: 768px){
 	.my-design img{
