--- a/contactpage.html
+++ b/contactpage.html
@@ -222,6 +222,11 @@
     padding: 10px;
 	background-image: linear-gradient(to right, rgb(0, 183, 255), rgb(15, 197, 15));
 }
+	    @media only screen and (max-width: 768px) {
+            .home-button{
+                display:hidden;
+            }
+        }
 .home-button{
   animation: sliding-text 1.5s ease-out;
 }
