--- a/contactpage.html
+++ b/contactpage.html
@@ -224,7 +224,7 @@
 }
 	    @media only screen and (max-width: 768px) {
             .home-button{
-                display:hidden;
+                display: none;
             }
         }
 .home-button{
