--- a/contactpage.html
+++ b/contactpage.html
@@ -132,6 +132,7 @@
             grid-gap: 30px;
         }
         .contact{
+		text-align:left;
             padding-left: 40px;
             padding-bottom: 35px;
             background-color: #212121;
