--- a/contactpage.html
+++ b/contactpage.html
@@ -274,6 +274,6 @@
         <a>buariadebola@gmail.com</a>
     </div>
     </div>
-    <footer><a href="portfolio.html"><button class="home-button">Home</button></a></footer>
+    <footer><a href="html://buariadebola-portfolio.vercel.app/"><button class="home-button">Home</button></a></footer>
 </body>
 </html>
