--- a/contactpage.html
+++ b/contactpage.html
@@ -169,6 +169,7 @@
         }
         @media only screen and (max-width: 768px) {
             .contact{
+		    text-align:left;
                 width: 60%;
                 height: 250px;
             }
