--- a/contactpage.html
+++ b/contactpage.html
@@ -173,6 +173,9 @@
                 width: 60%;
                 height: 250px;
             }
+	.contact p{
+		margin-left:0;
+	}
         }
         .contact{
   animation: sliding-text 1.5s ease-out;
