--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@ h1{
 	display: flex;
 	position: absolute;
 	top:60%;
-	left: 42%;
+	left: 50%;
+	translate: -50% -50%;
 	width: calc(180px + 2vw);
 	height: auto;
 	border: 2px solid rgba(11, 35, 81, 1.0);
@@ -72,8 +73,9 @@ h1{
 }
 @media only screen and (max-width: 768px){
 	.box{
+		translate: -50% -50%;
 		top: 80%;
-		left: 25%;
+		left: 50%;
 	}
 }
 
